--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
-* {
+body {
     box-sizing: border-box;
     margin: 0;
     overflow: hidden;
-    cursor: crosshair;
+    cursor: grab;
 }
 div {
     position: fixed;
